--- a/app/views/admin/meetings/show.html.haml
+++ b/app/views/admin/meetings/show.html.haml
@@ -1,14 +1,14 @@
 .icon-bar.five-up
-  =link_to invite_admin_meeting_path(@meeting), class: 'item', title: "Invite" do
+  = link_to invite_admin_meeting_path(@meeting), class: 'item', title: 'Invite' do
     %i.fa.fa-send-o
     %label Invite
-  =link_to edit_admin_meeting_path(@meeting), class: 'item' do
+  = link_to edit_admin_meeting_path(@meeting), class: 'item' do
     %i.fa.fa-pencil
     %label Edit
-  =link_to attendees_emails_admin_meeting_path(@meeting, format: 'text'), class: 'item' do
+  = link_to attendees_emails_admin_meeting_path(@meeting, format: 'text'), class: 'item' do
     %i.fa.fa-at
     %label Emails
-  =link_to admin_meeting_path(@meeting, format: 'csv'), class: 'item', title: "CSV for labels" do
+  = link_to admin_meeting_path(@meeting, format: 'csv'), class: 'item', title: 'CSV for labels' do
     %i.fa.fa-users
     %label Labels
 
@@ -38,7 +38,7 @@
       .large-3.small-12.columns
         %h4 Team
         - @meeting.organisers.each do |organiser|
-          %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: organiser.full_name }
+          %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true',  title: organiser.full_name }
             = image_tag(organiser.avatar(40))
 
       .large-3.columns
