--- a/app/views/admin/members/_member_note.html.haml
+++ b/app/views/admin/members/_member_note.html.haml
@@ -1,5 +1,3 @@
 #note
-  %p
-    = member_note.note
-  %cite
-    &ndash; #{member_note.author.full_name}, #{member_note.created_at.to_s(:short)}
+  %p= member_note.note
+  %cite &ndash; #{member_note.author.full_name}, #{member_note.created_at.to_s(:short)}
