--- a/app/views/admin/events/_form.html.haml
+++ b/app/views/admin/events/_form.html.haml
@@ -6,12 +6,12 @@
           = f.input :name, label: 'Event Name'
       .row
         .large-4.columns
-          = f.input :email, as: :email, label: "Contact email"
+          = f.input :email, as: :email, label: 'Contact email'
         .large-4.columns
           = f.input :slug, placeholder: 'for URI, e.g. 24-pull-requests'
       .row
         .large-6.columns
-          = f.input :date_and_time, as: :string, required: true, label: "Date"
+          = f.input :date_and_time, as: :string, required: true, label: 'Date'
       .row
         .large-3.columns
           = f.input :begins_at, as: :string, required: true
@@ -29,11 +29,11 @@
       = f.input :schedule
   .row
     .large-3.columns
-      = f.association :venue, input_html: { data: { placeholder: "Select sponsors" }}, required: true
+      = f.association :venue, input_html: { data: { placeholder: 'Select sponsors' }}, required: true
   .row
     .large-6.columns
       %br
-      = f.association :sponsors, input_html: { data: { placeholder: "Select sponsors" }}
+      = f.association :sponsors, input_html: { data: { placeholder: 'Select sponsors' }}
   .row
     .large-6.columns
       %br
@@ -42,7 +42,7 @@
   .row
     .large-12.columns
       %br
-      = f.input :announce_only, as: :boolean, hint: "Events where invitations are not handled via our application"
+      = f.input :announce_only, as: :boolean, hint: 'Events where invitations are not handled via our application'
     .large-12.columns
       %br
       = f.input :external_url, label: 'External Registration URL', placeholder: 'include protocol, e.g. https://codebar.io'
@@ -52,7 +52,7 @@
       .panel.callout
         .row
           .large-12.columns
-            = f.input :tito_url, as: :url, hint: "Only used for student tickets"
+            = f.input :tito_url, as: :url, hint: 'Only used for student tickets'
           .large-6.columns
             = f.input :coach_spaces
           .large-6.columns
@@ -74,10 +74,10 @@
         .row
           .large-12.columns
             %br
-            = f.input :invitable, as: :boolean, hint: "Allow members to RSVP"
+            = f.input :invitable, as: :boolean, hint: 'Allow members to RSVP'
         .row
           .large-12.columns
-            = f.input :show_faq, as: :boolean, hint: "Display FAQ section?"
+            = f.input :show_faq, as: :boolean, hint: 'Display FAQ section?'
         .row
           .large-12.columns
             = f.input :display_coaches, as: :boolean
@@ -86,11 +86,11 @@
             = f.input :display_students, as: :boolean
         .row
           .large-12.columns
-            = f.input :confirmation_required, as: :boolean, hint: "Will we confirm each registration?"
+            = f.input :confirmation_required, as: :boolean, hint: 'Will we confirm each registration?'
         .row
           .large-12.columns
-            = f.input :surveys_required, as: :boolean, hint: "Do we need to collect additional info from attendees?"
+            = f.input :surveys_required, as: :boolean, hint: 'Do we need to collect additional info from attendees?'
   .row
     .large-12.columns.text-right
-      = f.submit "Save", class: "button"
+      = f.submit 'Save', class: 'button'
 
