--- a/app/views/admin/groups/show.html.haml
+++ b/app/views/admin/groups/show.html.haml
@@ -10,11 +10,7 @@
         - @group.members.each do |member|
           %tbody
             %tr
-              %td
-                =image_tag member.avatar(32), class: 'th radius', title: member.full_name
-              %td
-                =link_to member.full_name, admin_member_path(member)
-              %td
-                =mail_to member.email, member.email
-              %td
-                =member.mobile
+              %td= image_tag member.avatar(32), class: 'th radius', title: member.full_name
+              %td= link_to member.full_name, admin_member_path(member)
+              %td= mail_to member.email, member.email
+              %td= member.mobile
