--- a/app/views/admin/meetings/_invitation_management.html.haml
+++ b/app/views/admin/meetings/_invitation_management.html.haml
@@ -12,12 +12,12 @@
         = simple_form_for :meeting_invitations, url: admin_meeting_invitations_path do |f|
           .medium-6.columns
             = f.select :member, Member.all.map { |u| ["#{u.full_name}", u.id] }, { include_blank: true }, { class: 'chosen-select', required: true, data: { placeholder: 'Select a member to RSVP' } }
+            = f.input :meeting_id, as: :hidden, input_html: { value: @meeting.slug }
 
-            = f.input :meeting_id, :as => :hidden, :input_html => { :value => @meeting.slug }
           .large-3.columns
-            %span{ "data-tooltip" => true, "aria-haspopup" => "true", class: "has-tip", title: t('admin.workshop.manage_rsvps.text') }
+            %span{ 'data-tooltip': true, 'aria-haspopup': 'true', class: 'has-tip', title: t('admin.workshop.manage_rsvps.text') }
               %i.fa.fa-info
-            = f.submit "Add"
+            = f.submit 'Add'
       %br
 
   .row
@@ -35,8 +35,8 @@
                 method: :put
 
             - else
-              =link_to " ", admin_meeting_invitation_path(invitation, attendance_status: false, attended: false), class: "fa fa-minus-square-o", method: :put
+              = link_to '', admin_meeting_invitation_path(invitation, attendance_status: false, attended: false), class: 'fa fa-minus-square-o', method: :put
 
           .small-10.columns
-            =link_to admin_member_path(invitation.member) do
-              =invitation.member.full_name
+            = link_to admin_member_path(invitation.member) do
+              = invitation.member.full_name
