--- a/app/views/admin/meetings/edit.html.haml
+++ b/app/views/admin/meetings/edit.html.haml
@@ -13,38 +13,31 @@
                 = f.input :slug
         .row
           .large-12.columns
-            = f.input :date_and_time, as: :datetime, required: true, label: "Date", input_html: { style: "width: 120px;" }
-
+            = f.input :date_and_time, as: :datetime, required: true, label: 'Date', input_html: { style: 'width: 120px;' }
         .row
           .large-12.columns
             = f.input :description, as: :text
-
         .row
           .large-3.columns
             = f.input :spaces, as: :integer
-
         .row
           .large-3.columns
-            = f.association :venue, input_html: { data: { placeholder: "Select venue" }}, required: true
+            = f.association :venue, input_html: { data: { placeholder: 'Select venue' }}, required: true
         .row
           .large-6.columns
             %br
             %label Organisers
             = f.collection_select :organisers, Member.all, :id, :full_name, { selected: @meeting.organisers.map(&:id) }, { multiple: true }
-
         .row
           .large-6.columns
             %label Chapters
             = f.collection_select :chapters, Chapter.all, :id, :name, { selected: @meeting.chapters.map(&:id) }, { multiple: true }
-
         .row
           .large-6.columns
             %br
-            = f.input :invitable, as: :boolean, hint: "Allow members to RSVP"
-
-
+            = f.input :invitable, as: :boolean, hint: 'Allow members to RSVP'
         .row
           .large-12.columns.text-right
-            = f.submit "Update", class: "button"
+            = f.submit 'Update', class: 'button'
 
 %br
