--- a/app/views/admin/members/_note.html.haml
+++ b/app/views/admin/members/_note.html.haml
@@ -1,8 +1,8 @@
-#note-modal.reveal-modal{ "data-reveal" => true, "aria-labelledby" => "modalTitle",  "aria-hidden" => "true", role: "dialog" }
+#note-modal.reveal-modal{ 'data-reveal': true, 'aria-labelledby': 'modalTitle',  'aria-hidden': 'true', role: 'dialog' }
   %h3#modalTitle Add a note for #{@member.full_name}
   = simple_form_for [:admin, @member_note] do |f|
     = f.input :note, label: false, placeholder: 'e.g. very enthusiastic student.'
     = f.hidden_field :member_id, value: @member.id
-    = f.submit "Add note", class: 'button small'
-  =link_to "#", class: "close-reveal-modal", "aria-label" => "Close" do
+    = f.submit 'Add note', class: 'button small'
+  = link_to '#', class: 'close-reveal-modal', 'aria-label': 'Close' do
     &#215;
