--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -1,15 +1,15 @@
 .icon-bar.six-up
-  =link_to new_admin_member_ban_path(@member), class: 'item' do
+  = link_to new_admin_member_ban_path(@member), class: 'item' do
     %i.fa.fa-ban.warning
     %label Ban
-  =link_to "#", class: 'item', "data-reveal-id" => "note-modal" do
+  = link_to '#', class: 'item', 'data-reveal-id': 'note-modal' do
     %i.fa.fa-pencil
     %label Note
   - if @member.student?
-    =link_to admin_member_send_eligibility_email_path(@member), class: 'item' do
+    = link_to admin_member_send_eligibility_email_path(@member), class: 'item' do
       %i.fa.fa-envelope
       %label Eligibility
-  =link_to admin_member_send_attendance_email_path(@member), class: 'item' do
+  = link_to admin_member_send_attendance_email_path(@member), class: 'item' do
     %i.fa.fa-clock-o
     %label Attendance
 
@@ -17,15 +17,14 @@
   .stripe.reverse
     .row
       .medium-1.columns
-        =image_tag @member.avatar(100), class: 'th radius', title: @member.full_name
+        = image_tag @member.avatar(100), class: 'th radius', title: @member.full_name
       .medium-11.columns
-        %h2
-          = @member.full_name
+        %h2= @member.full_name
     .row
       .medium-8.columns
         %dl
           %dt Pronouns
-          %dd= @member.pronouns || "Not specified"
+          %dd= @member.pronouns || 'Not specified'
 
           %dt Email
           %dd= mail_to @member.email, @member.email
@@ -34,7 +33,7 @@
           %dd= link_to "@#{@member.twitter}", twitter_url_for(@member.twitter)
 
           %dt Phone number
-          %dd= @member.mobile || "N/A"
+          %dd= @member.mobile || 'N/A'
 
           %dt About
           %dd= @member.about_you
@@ -113,7 +112,7 @@
                     - else
                       %i.fa.fa-warning
                   %td
-                    =link_to invitation_path(invitation) do
+                    = link_to invitation_path(invitation) do
                       %label.label=workshop.chapter.name
                   %td
                     = l(workshop.date_and_time, format: :date)
@@ -138,12 +137,13 @@
 
       .medium-4.columns
         - if @member.member_notes.any?
-          %dl.accordion{ "data-accordion" => true }
+          %dl.accordion{ 'data-accordion': true }
             %dd.accordion-navigation
-              =link_to "#notes" do
+              = link_to '#notes' do
                 Notes (#{@member.member_notes.count})
               #notes.content
-                = render partial: "member_note", collection: @member.member_notes
+                = render partial: 'member_note', collection: @member.member_notes
+
   - if @member.bans.any?
     .stripe.reverse
       .row
@@ -153,35 +153,25 @@
             %thead
               %tr
                 %th
-                %th
-                  expires on
-                %th
-                  reason
-                %th
-                  admin note
-                %th
-                  explanation sent to user
+                %th expires on
+                %th reason
+                %th admin note
+                %th explanation sent to user
             - @member.bans.each do |ban|
               %tr
                 %td
                   - if ban.permanent?
                     %label.label.success Permanent
-                    %td
-                      Indefinite
+                    %td Indefinite
                   - elsif ban.active?
                     %label.label.success Active
-                    %td
-                      = l(ban.expires_at, format: :date)
+                    %td= l(ban.expires_at, format: :date)
                   - else
                     %label.label.success Expired
-                    %td
-                      = l(ban.expires_at, format: :date)
+                    %td= l(ban.expires_at, format: :date)
 
-                %td
-                  = ban.reason
-                %td
-                  = ban.note
-                %td
-                  = ban.explanation
+                %td= ban.reason
+                %td= ban.note
+                %td= ban.explanation
 
 = render partial: 'note'
