--- a/app/views/admin/portal/index.html.haml
+++ b/app/views/admin/portal/index.html.haml
@@ -4,21 +4,21 @@
       %h3 Chapters
       %ul.side-nav
         - @chapters.each do |chapter|
-          %li
-            = link_to chapter.name, [ :admin, chapter ]
+          %li= link_to chapter.name, [ :admin, chapter ]
     .large-4.columns
       %h3 Upcoming Workshops
       %ul.side-nav
         - @workshops.each do |workshop|
           %li
-            =link_to admin_workshop_path(workshop) do
-              %strong=workshop.chapter.name
+            = link_to admin_workshop_path(workshop) do
+              %strong= workshop.chapter.name
               %br
-              =humanize_date_with_time(workshop.date_and_time, workshop.time)
+              = humanize_date_with_time(workshop.date_and_time, workshop.time)
     .large-4.columns
-      =link_to "View all sponsors", admin_sponsors_path, class: "button expand round"
-      =link_to "Admin Guide", admin_guide_path, class: "button expand round"
+      = link_to 'View all sponsors', admin_sponsors_path, class: 'button expand round'
+      = link_to 'Admin Guide', admin_guide_path, class: 'button expand round'
     %hr
+
   .row
     .large-3.columns
       %h3 Groups
@@ -27,6 +27,7 @@
           %li
             = link_to [:admin, group] do
               #{group.name} (#{group.chapter.name})
+
     .large-9.columns
       %h3 Latest Subscribers
       = render partial: 'admin/subscriptions/index', locals: { subscribers: @subscribers }
