--- a/app/views/admin/sponsors/_form.html.haml
+++ b/app/views/admin/sponsors/_form.html.haml
@@ -13,16 +13,16 @@
         = f.input :avatar, as: :file
         = f.hidden_field :image_cache
       .large-3.columns
-        = f.input :seats, label: "Student Spots"
+        = f.input :seats, label: 'Student Spots'
       .large-3.columns
-        = f.input :number_of_coaches, label: "Coaches Spots"
+        = f.input :number_of_coaches, label: 'Coaches Spots'
   .row
     .large-6.columns
       .panel
         %strong Address
         = f.simple_fields_for :address do |a|
-          = a.input :flat, label: "Line 1"
-          = a.input :street, label: "Line 2"
+          = a.input :flat, label: 'Line 1'
+          = a.input :street, label: 'Line 2'
           = a.input :postal_code
           = a.input :city
           = a.input :latitude
@@ -31,15 +31,15 @@
       .panel
         %strong Contact Details
         %p Complete the fields below and/or select a member(s)
-        = f.collection_select :contact_ids, Member.all, :id, :full_name, 
+        = f.collection_select :contact_ids, Member.all, :id, :full_name,
           { selected: @sponsor.contacts.map(&:id) }, { multiple: true }
         = f.input :email
-        = f.input :contact_first_name, label: "Contact First Name"
-        = f.input :contact_surname, label: "Contact Surname"
+        = f.input :contact_first_name, label: 'Contact First Name'
+        = f.input :contact_surname, label: 'Contact Surname'
 
   .row
     .large-6.columns
       - if params[:action] == 'new'
-        = f.submit "Create sponsor", class: "button round"
+        = f.submit 'Create sponsor', class: 'button round'
       - elsif params[:action] == 'edit'
-        = f.submit "Save changes", class: "button round"
+        = f.submit 'Save changes', class: 'button round'
