--- a/app/views/admin/sponsors/index.html.haml
+++ b/app/views/admin/sponsors/index.html.haml
@@ -9,24 +9,20 @@
         LOGO
       .large-3.columns
         CONTACT(S)
+
   - @sponsors.each do |sponsor|
     .row
       %hr
       .large-3.columns
         = sponsor.name
+        %p= AddressDecorator.new(sponsor.address).to_html
         %p
-          = AddressDecorator.new(sponsor.address).to_html
-        %p
-          %em
-            Sponsored
-            = sponsor.workshop_sponsors.count
-            sessions
+          %em Sponsored #{sponsor.workshop_sponsors.count} sessions
 
       .large-4.columns
         = image_tag sponsor.avatar, class: 'sponsor'
       .large-3.columns
-        %p
-          = SponsorDecorator.new(sponsor).contact_info
+        %p= SponsorDecorator.new(sponsor).contact_info
 
       .large-1.columns
         = link_to "Edit", edit_admin_sponsor_path(sponsor), class: 'button round small'
