--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -6,22 +6,22 @@
           %td.small-1.columns
             - if (invitation.parent.date_and_time - 30.minutes).past?
               - if invitation.attended.nil?
-                =link_to admin_workshop_invitation_path(@workshop, invitation, attended: true), class: 'verify_attendance', title: "Verify attendance", method: :put, remote: true do
+                = link_to admin_workshop_invitation_path(@workshop, invitation, attended: true), class: 'verify_attendance', title: 'Verify attendance', method: :put, remote: true do
                   %i.fa.fa-square-o
               - else
                 %i.fa.fa-check-square-o
             - else
-              =link_to admin_workshop_invitation_path(@workshop, invitation, attending: false), class: 'cancel_attendance', title: "Cancel RSVP", method: :put, remote: true do
+              = link_to admin_workshop_invitation_path(@workshop, invitation, attending: false), class: 'cancel_attendance', title: 'Cancel RSVP', method: :put, remote: true do
                 %i.fa.fa-minus-square-o
           %td.small-5.columns
             - if invitation.member.newbie?
-              %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "New attendee." }
+              %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true', title: 'New attendee.' }
                 %i.fa.fa-paw
             - elsif invitation.member.more_than_two_absences?
-              %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "More than 2 no-shows" }
+              %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true', title: 'More than 2 no-shows' }
                 %i.fa.fa-exclamation-circle
 
-            =link_to admin_member_path(invitation.member) do
+            = link_to admin_member_path(invitation.member) do
               - if invitation.member.full_name.blank?
                 = invitation.member.email
               - else
@@ -29,7 +29,7 @@
           %td.small-6.columns
             %small=invitation.note
             - if invitation.rsvp_time.present?
-              %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "Time of RSVP" }
+              %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true',  title: 'Time of RSVP' }
                 %small
                   %i.fa.fa-clock-o
                   =l(invitation.rsvp_time)
