--- a/app/views/admin/workshops/_edit_form.html.haml
+++ b/app/views/admin/workshops/_edit_form.html.haml
@@ -4,13 +4,13 @@
       = f.association :chapter, as: :select, collection: Chapter.available_to_user(current_user)
   .row
     .large-3.columns
-      = f.input :date_and_time, as: :string, required: true, label: "Date", input_html: { data: { value: @workshop.date_and_time.strftime("%d/%m/%Y") } }
+      = f.input :date_and_time, as: :string, required: true, label: 'Date', input_html: { data: { value: @workshop.date_and_time.strftime('%d/%m/%Y') } }
   .row
     .large-3.columns
-      = f.input :time, as: :string, required: true, input_html: { id: "sessions_time", data: { value: (@workshop.time).strftime("%H:%M") }}
+      = f.input :time, as: :string, required: true, input_html: { id: 'sessions_time', data: { value: (@workshop.time).strftime('%H:%M') }}
   .row
     .large-6.columns
-      = f.input :host, as: :select, collection: Sponsor.all, include_blank: true, selected: (@workshop.host.id rescue "")
+      = f.input :host, as: :select, collection: Sponsor.all, include_blank: true, selected: (@workshop.host.id rescue '')
   .row
     .large-6.columns
       = f.association :sponsors
@@ -21,4 +21,4 @@
       = f.input :invitable
   .row
     .large-12.columns.text-right
-      = f.submit "Save", class: "button"
+      = f.submit 'Save', class: 'button'
