--- a/app/views/admin/workshops/_invitation_management.html.haml
+++ b/app/views/admin/workshops/_invitation_management.html.haml
@@ -17,7 +17,7 @@
           .medium-6.columns
             = f.select :invitations, @workshop.invitations.not_accepted.all.map { |u| [ "#{u.member.full_name} (#{u.role})", u.token] }, { include_blank: true }, { class: 'chosen-select', required: true, data: { placeholder: 'Select a member to RSVP' } }
           .large-3.columns
-            %span{ "data-tooltip" => true, "aria-haspopup" => "true", class: "has-tip", title: t('admin.workshop.manage_rsvps.text') }
+            %span.has-tip{ 'data-tooltip': true, 'aria-haspopup': 'true', title: t('admin.workshop.manage_rsvps.text') }
               %i.fa.fa-info
       %br
 
@@ -26,13 +26,13 @@
       %h4
         Students
         %label.label.round.secondary #{@attending_students.count}#{(" of " + @workshop.host.seats.to_s) if @workshop.has_host?}
-      =render partial: 'admin/workshop/attendances', locals: { invitations: @attending_students }
-      =render partial: 'admin/workshop/waiting_list', locals: { waiting_list: @student_waiting_list }
+      = render partial: 'admin/workshop/attendances', locals: { invitations: @attending_students }
+      = render partial: 'admin/workshop/waiting_list', locals: { waiting_list: @student_waiting_list }
     .medium-6.columns
       .row
         %h4
           Coaches
           %label.label.round.secondary #{@workshop.attending_coaches.count}#{(" of " + @workshop.host.coach_spots.to_s) if @workshop.has_host?}
-      =render partial: 'admin/workshop/attendances', locals: { invitations: @attending_coaches }
-      =render partial: 'admin/workshop/waiting_list', locals: { waiting_list: @coach_waiting_list }
+      = render partial: 'admin/workshop/attendances', locals: { invitations: @attending_coaches }
+      = render partial: 'admin/workshop/waiting_list', locals: { waiting_list: @coach_waiting_list }
 
