--- a/app/views/admin/workshops/show.html.haml
+++ b/app/views/admin/workshops/show.html.haml
@@ -1,30 +1,30 @@
 .icon-bar.six-up
-  =link_to edit_admin_workshop_path(@workshop), class: 'item' do
+  = link_to edit_admin_workshop_path(@workshop), class: 'item' do
     %i.fa.fa-pencil
     %label Edit
   - if !@workshop.date_and_time.future?
-    =link_to "#", class: "item disabled", title: "The event has already taken place" do
+    = link_to '#', class: 'item disabled', title: 'The event has already taken place' do
       %i.fa.fa-send-o
       %label Invite
   - elsif @workshop.has_valid_host? and @workshop.invitable?
-    =link_to admin_workshop_invite_path(@workshop), method: :post, class: "item" do
+    = link_to admin_workshop_invite_path(@workshop), method: :post, class: 'item' do
       %i.fa.fa-send-o
       %label Invite
   - else
 
-    =link_to "#", class: "item disabled", title: "The workshop is not invitable." do
+    = link_to '#', class: 'item disabled', title: 'The workshop is not invitable.' do
       %i.fa.fa-send-o
       %label Invite
-  =link_to admin_workshop_path(format: 'csv'), class: 'item', title: "CSV for labels" do
+  = link_to admin_workshop_path(format: 'csv'), class: 'item', title: 'CSV for labels' do
     %i.fa.fa-users
     %label Labels
-  =link_to admin_workshop_attendees_checklist_path(@workshop, format: 'text'), title: "Attendee checklist", class: 'item' do
+  = link_to admin_workshop_attendees_checklist_path(@workshop, format: 'text'), title: 'Attendee checklist', class: 'item' do
     %i.fa.fa-list-ul
     %label Attendees
-  =link_to admin_workshop_attendees_emails_path(@workshop, format: 'text'), title: "Attendee emails", class: 'item' do
+  = link_to admin_workshop_attendees_emails_path(@workshop, format: 'text'), title: 'Attendee emails', class: 'item' do
     %i.fa.fa-at
     %label Emails
-  =link_to admin_workshop_path(@workshop), method: :delete, data: { confirm: 'Are you sure you want to delete this workshop?' }, title: "Destroy workshop", class: 'item' do
+  = link_to admin_workshop_path(@workshop), method: :delete, data: { confirm: 'Are you sure you want to delete this workshop?' }, title: 'Destroy workshop', class: 'item' do
     %i.fa.fa-remove
     %label Destroy
 
@@ -35,7 +35,7 @@
       .medium-12.columns
         %h2
           Workshop
-          =link_to [:admin, @workshop.chapter] do
+          = link_to [:admin, @workshop.chapter] do
             %small=@workshop.chapter.name
         %h3
           %small #{l(@workshop.date_and_time)}
@@ -43,17 +43,14 @@
           %strong.label.round.primary #{@workshop.venue.seats} student spots, #{@workshop.venue.coach_spots} coach spots
           - unless @workshop.spaces?
             %label.label.round.warning Full
-
     %br
-
     .row
       .large-3.small-6.columns#host
         - if @workshop.venue.present?
           %h4 Venue
           %strong= @workshop.venue.name
           %br
-          %small
-            = @address.to_html
+          %small= @address.to_html
       .large-3.small-6.columns#sponsors
         - if (@workshop.sponsors - [@workshop.host]).any?
           %h4 Sponsors
@@ -65,9 +62,8 @@
       .large-6.small-12.columns
         %h4 Team
         - @workshop.organisers.each do |organiser|
-          %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: organiser.full_name }
+          %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true',  title: organiser.full_name }
             = image_tag(organiser.avatar(40))
-
 
   .stripe.reverse#invitations
     = render partial: 'invitation_management'
