--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,8 +1,8 @@
 - flash.each do |name, msg|
-  - unless (name.eql?("notice") && @suppress_notices) || (name.eql?("warning") && @suppress_warnings)
+  - unless (name.eql?('notice') && @suppress_notices) || (name.eql?('warning') && @suppress_warnings)
     - if msg.is_a?(String)
-      - name = name.eql?("notice") ? "info" : name
-      %div{ "data-alert" => '', :class => "alert-box #{name}" }
-        =link_to "#", class: 'close' do
+      - name = name.eql?('notice') ? 'info' : name
+      %div{ 'data-alert': '', class: "alert-box #{name}" }
+        = link_to '#', class: 'close' do
           &times;
         = content_tag :div, msg.html_safe
