--- a/app/views/layouts/_meta.html.haml
+++ b/app/views/layouts/_meta.html.haml
@@ -1,13 +1,13 @@
-%meta{charset: "utf-8"}
-%meta{name: "viewport", content: "width=device-width, initial-scale=1.0" }
-%meta{name: "robots", content: "index, follow" }
-%meta{property: "fb:admins", content: "622070503" }
-%meta{property: "og:type", content: "website" }
-%meta{property: "og:locale", content: "en_GB" }
-%meta{property: "og:site_name", content: "codebar"}
-%meta{name: "keywords", content: "codebar, programming, diversity, html, css, javascript, ruby"}
-%meta{property: "og:image", content: "http://codebar.io/images/logo-square.png"}
-%meta{ property: "og:url", content: "http://codebar.io#{url_for(nil)}" }
-%meta{property: "og:title", content: "codebar"}
-%meta{property: "og:description", content: "Making tech more diverse and welcoming by bringing people together and helping teach programming skills."}
-%meta{ name: "description", content: "Making tech more diverse and welcoming by bringing people together and helping teach programming skills."}
+%meta{ charset: 'utf-8' }
+%meta{ name: 'viewport', content: 'width=device-width, initial-scale=1.0' }
+%meta{ name: 'robots', content: 'index, follow' }
+%meta{ property: 'fb:admins', content: '622070503' }
+%meta{ property: 'og:type', content: 'website' }
+%meta{ property: 'og:locale', content: 'en_GB' }
+%meta{ property: 'og:site_name', content: 'codebar' }
+%meta{ name: 'keywords', content: 'codebar, programming, diversity, html, css, javascript, ruby' }
+%meta{ property: 'og:image', content: 'http://codebar.io/images/logo-square.png' }
+%meta{ property: 'og:url', content: "http://codebar.io#{url_for(nil)}" }
+%meta{ property: 'og:title', content: 'codebar' }
+%meta{ property: 'og:description', content: 'Making tech more diverse and welcoming by bringing people together and helping teach programming skills.' }
+%meta{ name: 'description', content: 'Making tech more diverse and welcoming by bringing people together and helping teach programming skills.' }
