--- a/app/views/layouts/_organiser_menu.html.haml
+++ b/app/views/layouts/_organiser_menu.html.haml
@@ -1,13 +1,13 @@
 %li
   %label Admin Menu
-%li=link_to "View Feedback", coach_feedback_index_path
+%li= link_to 'View Feedback', coach_feedback_index_path
 - if has_permission?
-  %li=link_to "New workshop", new_admin_workshop_path
-  %li=link_to "New sponsor", new_admin_sponsor_path
-  %li=link_to "New event", new_admin_event_path
-%li=link_to "Review jobs (#{jobs_pending_approval})", admin_jobs_path
+  %li= link_to 'New workshop', new_admin_workshop_path
+  %li= link_to 'New sponsor', new_admin_sponsor_path
+  %li= link_to 'New event', new_admin_event_path
+%li= link_to "Review jobs (#{jobs_pending_approval})", admin_jobs_path
 -if current_user.organised_chapters.any?
   %li
     %label My Chapters
   - current_user.organised_chapters.each do |chapter|
-    %li=link_to chapter.name, admin_chapter_path(chapter)
+    %li= link_to chapter.name, admin_chapter_path(chapter)
