--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,28 +1,26 @@
 !!!DOCTYPE html
-%html{ lang: "en" }
+%html{ lang: 'en' }
   %head
     = render partial: 'layouts/meta'
-    %link{ rel: "image_src", href: "http://codebar.io/images/logo-square.png" }
+    %link{ rel: 'image_src', href: 'http://codebar.io/images/logo-square.png' }
 
     %title codebar.io
     = favicon_link_tag 'favicon.ico'
-    = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
-    = javascript_include_tag "vendor/modernizr"
-    = javascript_include_tag "application", "data-turbolinks-track" => true
+    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': true
+    = javascript_include_tag 'vendor/modernizr'
+    = javascript_include_tag 'application', 'data-turbolinks-track': true
     %link{ href: 'https://fonts.googleapis.com/css?family=Gabriela', rel: 'stylesheet', type: 'text/css' }
     %link{ href: 'https://fonts.googleapis.com/css?family=Cousine:400,700', rel:'stylesheet', type:'text/css'}
     %link{ href: 'https://fonts.googleapis.com/css?family=Open+Sans:400,300', rel:'stylesheet', type:'text/css' }
     = csrf_meta_tags
+
   %body.no-js
-    .off-canvas-wrap{ "data-offcanvas" => true }
+    .off-canvas-wrap{ 'data-offcanvas': true }
       .inner-wrap
         #top
           = render partial: 'layouts/navigation'
           = render partial: 'layouts/messages'
-
-        - if logged_in?
-          = render partial: "layouts/aside"
+          = render partial: 'layouts/aside' if logged_in?
         = yield
-
         = render partial: 'layouts/footer'
         %a.exit-off-canvas
