--- a/app/views/shared/_social_media.html.haml
+++ b/app/views/shared/_social_media.html.haml
@@ -1,16 +1,16 @@
 %ul.inline-list.right.social-media
   %li.github
-    =link_to "https://github.com/codebar" do
+    = link_to 'https://github.com/codebar' do
       %span.fa-stack.fa-lg
         %i.fa.fa-square.fa-stack-2x
         %i.fa.fa-github.fa-stack-1x.fa-inverse
   %li.twitter
-    =link_to "https://twitter.com/codebar" do
+    = link_to 'https://twitter.com/codebar' do
       %span.fa-stack.fa-lg
         %i.fa.fa-square.fa-stack-2x
         %i.fa.fa-twitter.fa-stack-1x.fa-inverse
   %li.facebook
-    =link_to "https://facebook.com/codebarHQ" do
+    = link_to 'https://facebook.com/codebarHQ' do
       %span.fa-stack.fa-lg
         %i.fa.fa-square.fa-stack-2x
         %i.fa.fa-facebook.fa-stack-1x.fa-inverse
