--- a/app/views/admin/events/_form.html.haml
+++ b/app/views/admin/events/_form.html.haml
@@ -19,7 +19,8 @@
           = f.input :ends_at, as: :string, required: true
   .row
     .large-12.columns
-      = f.input :description, as: :text
+      = f.input :description, as: :text,
+      placeholder: 'Use this space to write an invitation message and description of the event. This copy will also be used in the email invitation. You can use HTML here!'
   .row
     .large-12.columns
       = f.input :info, label: 'RSVP instructions'
@@ -65,6 +66,11 @@
         .row
           .large-12.columns
             = f.association :chapters, hint: 'Which chapters do you want to invite to this event? Only one invitation will be emailed out to members with multiple subscriptions when you click Invite from the event page.'
+        %br
+        .row
+          .large-12.columns
+            = f.input :audience, collection: @event.permitted_audience_values,
+            hint: 'Optionally, specify if invitations should only be sent to students or coaches (ex. a CV workshop targeted toward students may not need invites sent to the entire coach listserv) If left blank, all subscribers to a chapter will be invited via email'
         .row
           .large-12.columns
             %br
