Update text of email and add no-reply@codebar.io

--- a/app/views/session_invitation_mailer/invite_coach.html.haml
+++ b/app/views/session_invitation_mailer/invite_coach.html.haml
@@ -22,6 +22,8 @@
 
                 %p Before attending, make sure you read and understand our #{link_to "code of conduct", "http://codebar.io/code-of-conduct"}. We have a zero tolerance policy and expect everyone to behave appropriately. You should also go through our #{link_to "How to be an effective teacher", "http://codebar.io/effective-teacher-guide"}. If you have anything to add to it, please open a pull request or an issue.
 
+                %p Please note: We do not accept any RSVPs over email.
+
                 %p.callout #{link_to "Join us on Slack", "https://codebar-slack.herokuapp.com"} to offer help and guidance outside the workshops.
 
         .content
