--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -6,10 +6,10 @@
     %i.fa.fa-pencil
     %label Note
   - if @member.student?
-    = link_to admin_member_send_eligibility_email_path(@member), class: 'item' do
+    = link_to admin_member_send_eligibility_email_path(@member), data: {confirm: "Clicking OK will send an automated email to this user now to verify their eligibility for codebar. This cannot be undone. Are you sure?"}, class: 'item' do
       %i.fa.fa-envelope
       %label Eligibility
-  = link_to admin_member_send_attendance_email_path(@member), class: 'item' do
+  = link_to admin_member_send_attendance_email_path(@member), data: {confirm: "Clicking OK will send an automated email to this user now to warn them about missing too many sessions. This cannot be undone. Are you sure?"}, class: 'item' do
     %i.fa.fa-clock-o
     %label Attendance
 
