Let admins and organisers see coach associated with feedback

--- a/app/views/coach/feedback/index.html.haml
+++ b/app/views/coach/feedback/index.html.haml
@@ -16,6 +16,12 @@
             .large-2.columns
               - (0...feedback.rating).each do |rating|
                 .fa.fa-star
+          - if current_user.is_admin_or_organiser? and feedback.coach.present?
+            .row
+              .large-12.columns
+                %p
+                  %span Coach: 
+                  = link_to feedback.coach.full_name, admin_member_path(feedback.coach)
           - if feedback.request.present?
             .row
               .large-12.columns
