Change copy in welcome emails for student and coach

--- a/app/views/member_mailer/welcome_student.html.haml
+++ b/app/views/member_mailer/welcome_student.html.haml
@@ -31,6 +31,10 @@
   before attending.
 
 %p
+  If you didn't mean to sign up as a student, not to worry! You can always
+  = link_to "change your subscriptions on our website.", subscriptions_url
+
+%p
   If you have any questions, reply to this email or chat to one of the organisers at
   the workshop. We'll be at the table with the name stickers. We're here to help
   with anything on your mind.
