--- a/app/views/member_mailer/welcome_coach.html.haml
+++ b/app/views/member_mailer/welcome_coach.html.haml
@@ -2,8 +2,7 @@
 
 %p
   Welcome to codebar. Thanks so much for volunteering - we rely on coaches
-  to make our workshops a success, and it really helps the students who attend.
-  We're looking forward to seeing you at one of our events soon.
+  to make our workshops a success. We're looking forward to seeing you at one of our events soon.
 
 %p
   - if @member.subscriptions.any?
@@ -21,9 +20,8 @@
   %strong
     as soon as possible
   so we can allocate your place to someone on the waiting list. If you take a place
-  on the waiting list, please keep that evening free and watch your email like a hawk
-  on the day of the event. The waiting list will automatically upgrade you to 'attending'
-  if someone else drops out.
+  on the waiting list, please keep that evening free and check your email frequently.
+  You will be notified at least three hours before the event if you receive a place.
 
 %p
   Our workshops start with around 30 minutes of socialising and food, before we assign
@@ -44,6 +42,10 @@
   If you have any questions, reply to this email or chat to one of the organisers at
   the workshop. We'll be at the table with the name stickers. We're here to help
   with anything on your mind.
+
+%p
+  If you didn't mean to sign up as a coach, not to worry! You can always
+  = link_to "change your subscriptions on our website.", subscriptions_url
 
 %p
   We hope to see you at a workshop soon, and thanks for volunteering!
