updating site logo, open graph image and favicon to new logo, deleting unused css from stylesheets (#478)

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,9 +2,9 @@
   %nav.top-bar{ 'data-topbar': '' }
     %ul.title-area
       %li.name
-        = link_to root_path do
-          .brand
-            = image_tag 'logo.png', size: '100x100'
+        =link_to root_path do
+          .brand 
+            = image_tag "logo.png", size: "148x40"
       %li.toggle-topbar.menu-icon
         = link_to '#' do
           .fa.fa-stack-2x.fa-list
