--- a/app/views/admin/workshops/_edit_form.html.haml
+++ b/app/views/admin/workshops/_edit_form.html.haml
@@ -4,7 +4,7 @@
       = f.association :chapter, as: :select, collection: Chapter.available_to_user(current_user)
   .row
     .large-3.columns
-      = f.input :date_and_time, as: :string, required: true, label: 'Date', input_html: { data: { value: @workshop.date_and_time.strftime('%d/%m/%Y') } }
+      = f.input :date_and_time, as: :string, required: true, label: 'Date', input_html: { id: 'sessions_date_and_time', data: { value: @workshop.date_and_time.strftime('%d/%m/%Y') } }
   .row
     .large-3.columns
       = f.input :time, as: :string, required: true, input_html: { id: 'sessions_time', data: { value: (@workshop.time).strftime('%H:%M') }}
@@ -14,6 +14,13 @@
   .row
     .large-6.columns
       = f.association :sponsors
+  %br
+  .row
+    .large-6.columns
+      .panel.callout
+        %p Fill out these fields if you want RSVPs to open automatically at a future time. Leave blank if you'll handle it manually later.
+        = f.input :rsvp_open_date, as: :string, input_html: { id: 'workshop_rsvp_open_date', value: @rsvp_open_date }
+        = f.input :rsvp_open_time, as: :string, input_html: { id: 'workshop_rsvp_open_time', value: @rsvp_open_time }
   .row
     .large-6.columns
       %label Organisers
