fix: updating blog link in footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -20,7 +20,7 @@
 
     .large-3.columns
       %ul.no-bullet
-        %li= link_to t("navigation.blog"), "http://blog.codebar.io"
+        %li= link_to t("navigation.blog"), "https://medium.com/the-codelog"
         %li= link_to t("navigation.coaches"), coaches_path
         %li= link_to t("navigation.sponsors"), sponsors_path
         %li= link_to t("navigation.events"), events_path
