Add members directory lookup for admin user

--- a/app/views/admin/portal/index.html.haml
+++ b/app/views/admin/portal/index.html.haml
@@ -17,6 +17,7 @@
     .large-4.columns
       = link_to 'View all sponsors', admin_sponsors_path, class: 'button expand round'
       = link_to 'Admin Guide', admin_guide_path, class: 'button expand round'
+      = link_to 'Members Directory', admin_members_path, class: 'button expand round'
     %hr
 
   .row
