--- a/app/views/session_invitation_mailer/attending_reminder.html.haml
+++ b/app/views/session_invitation_mailer/attending_reminder.html.haml
@@ -35,7 +35,7 @@
                   #{@session.host.name}
                   %br
                   #{@host_address.to_html}
-                = link_to "Can't make it anymore?", full_url_for(invitation_url(@invitation)), class: 'btn'
+                = link_to "Update your attendance", full_url_for(invitation_url(@invitation)), class: 'btn'
 
         .content
           %table
