--- a/app/views/session_invitation_mailer/waiting_list_reminder.html.haml
+++ b/app/views/session_invitation_mailer/waiting_list_reminder.html.haml
@@ -39,7 +39,7 @@
                   #{@session.host.name}
                   %br
                   #{@host_address.to_html}
-                = link_to "See who will be there and update your attendance", full_url_for(invitation_url(@invitation)), class: 'btn'
+                = link_to "Update your attendance", full_url_for(invitation_url(@invitation)), class: 'btn'
 
         .content
           = render partial: 'shared_mailers/social'
