--- a/app/views/shared/_title.html.haml
+++ b/app/views/shared/_title.html.haml
@@ -1,7 +1,6 @@
-%section.title
+%section.hero.opaque
   .row
-    .large-12
-      %h1
-        %span= title
+    .medium-offset-1.medium-7.columns
+      %h2= title
       - if date
         %span.date= date
