validate group name to only accept 'Students' or 'Coaches', update form accordingly

--- a/app/views/admin/groups/new.html.haml
+++ b/app/views/admin/groups/new.html.haml
@@ -5,7 +5,7 @@
       = simple_form_for [:admin, @group] do |f|
         .row
           .large-6.columns
-            = f.input :name, placeholder: 'e.g. Students'
+            = f.input :name, label: "Name", collection: Group::NAMES, prompt: "Select one"
         .row
           .large-6.columns
             = f.input :description
